# synthseq

./: Cargo.toml
embedded/serial/: platformio.ini
embedded/serial/src/: main.cpp
src/: config.rs  engine.rs  input.rs  main.rs  main_old.rs  midi.rs  note.rs  poly_note.rs  sequencer.rs  serial.rs  synth_ctrl.rs
