[package]
name = "rust"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dasp = "0.11.0"
midir = "0.7.0"
pitch_calc = "0.12.0"
# synth = {git = "https://github.com/dritory/synth"}
cpal = "0.13.3"
synthesizer-io-core= {git = "https://github.com/raphlinus/synthesizer-io"}
time = "*"